blog + gamify learning

--- a/src/content/blog/CDIS_A1.mdx
+++ b/src/content/blog/CDIS_A1.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato & João Almeida
 file: /CDIS_A1.pdf
 snippet: Penetration Testing a Representative Testbed
-date: '28.01.2020'
+date: '28-01-2020'
 ---
