--- a/src/content/blog/CRY_CS2.mdx
+++ b/src/content/blog/CRY_CS2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /CRY_CS2.pdf
 snippet: Brief case study about the operations that make AES algorithm an excellent encryption algorithm.
-date: '24.10.2019'
+date: '24-10-2019'
 ---
