--- a/src/content/blog/CRY_CS3.mdx
+++ b/src/content/blog/CRY_CS3.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /CRY_CS3.pdf
 snippet: Brief case study about quantum cryptography
-date: '10.12.2019'
+date: '10-12-2019'
 ---
