--- a/src/content/blog/CSAM_CS1.mdx
+++ b/src/content/blog/CSAM_CS1.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /CSAM_CS1.pdf
 snippet: Case study about the motivations and patterns of an attacker
-date: '05.10.2019'
+date: '05-10-2019'
 ---
