--- a/src/content/blog/CSAM_CS2.mdx
+++ b/src/content/blog/CSAM_CS2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /CSAM_CS2.pdf
 snippet: Case study about security benchmarking
-date: '13.11.2019'
+date: '13-11-2019'
 ---
