--- a/src/content/blog/DDSS_A2.mdx
+++ b/src/content/blog/DDSS_A2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /DDSS_A2.pdf
 snippet: How to develop a secure web application.
-date: '23.11.2019'
+date: '23-11-2019'
 ---
