--- a/src/content/blog/DDSS_CS2.mdx
+++ b/src/content/blog/DDSS_CS2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /DDSS_CS2.pdf
 snippet: Case study about a hacking documentary
-date: '20.09.2019'
+date: '20-09-2019'
 ---
