--- a/src/content/blog/DDSS_CS3.mdx
+++ b/src/content/blog/DDSS_CS3.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /DDSS_CS3.pdf
 snippet: Case study about the data breach (that leaked 25 gb of sensitive data) that occurred in 2015.
-date: '17.10.2019'
+date: '17-10-2019'
 ---
