--- a/src/content/blog/FS_A1.mdx
+++ b/src/content/blog/FS_A1.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /FS_A1.pdf
 snippet: Study about the performance of recent web technologies (e.g., Next.js API routes, netlify functions and Cloudflare workers)
-date: '20.01.2021'
+date: '20-01-2021'
 ---
