--- a/src/content/blog/HPSI_A2.mdx
+++ b/src/content/blog/HPSI_A2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /HPSI_A2.pdf
 snippet: Study about containers and benchmarking comparison with Virtual Machines
-date: '28.12.2019'
+date: '28-12-2019'
 ---
