--- a/src/content/blog/ITS_T1.mdx
+++ b/src/content/blog/ITS_T1.mdx
@@ -3,7 +3,7 @@ title: Performing Phishing Attacks with Setoolkit and Metasploit
 type: presentation
 author: José Donato
 snippet: Phishing attacks are one of the most common type of cyber attacks. In this presentation I explain what they are and show some cool demos.
-date: '23.05.2020'
+date: '23-05-2020'
 ---
 
 Phishing attacks are one of the most common type of cyber attacks. In this presentation (unfortunately only in portuguese) I explain what they are and show some cool demos.
