--- a/src/content/blog/SP_A1.mdx
+++ b/src/content/blog/SP_A1.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato & João Almeida
 file: /SP_A1.pdf
 snippet: Trying to anonymize a dataset. Privacy, utility and risk analysis.
-date: '14.03.2020'
+date: '14-03-2020'
 ---
