--- a/src/content/blog/SP_A2.mdx
+++ b/src/content/blog/SP_A2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /SP_A2.pdf
 snippet: Privacy-related subject. Study about the technology that can provide the privacy that we need against the big corportations
-date: '20.05.2020'
+date: '20-05-2020'
 ---
