--- a/src/content/blog/SP_CS1.mdx
+++ b/src/content/blog/SP_CS1.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /SP_CS1.pdf
 snippet: De-anonymization attacks against large datasets (namely one released by Netflix).
-date: '20.04.2020'
+date: '20-04-2020'
 ---
