--- a/src/content/blog/SP_CS2.mdx
+++ b/src/content/blog/SP_CS2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /SP_CS2.pdf
 snippet: Analysis of a strategy to track smartphones by deploying wi-fi monitoring equipment.
-date: '03.04.2020'
+date: '03-04-2020'
 ---
