--- a/src/content/blog/adding-a-service-worker-into-your-next-js-application.mdx
+++ b/src/content/blog/adding-a-service-worker-into-your-next-js-application.mdx
@@ -3,8 +3,8 @@ title: Adding a service worker into your Next.js application
 type: post
 snippet: What are service workers and how to add them to a Next.js application
 coverImage: '/add-sw-blog.png'
-date: '14.10.2020'
-topics: '#pwa #nextjs #serviceworkers #javascript #react'
+date: '14-10-2020'
+topics: 'pwa nextjs serviceworkers javascript react'
 ---
 
 ___
