--- a/src/content/blog/push-notifications-expo.mdx
+++ b/src/content/blog/push-notifications-expo.mdx
@@ -3,8 +3,8 @@ title: Minimalist Approach to send Push Notifications with Expo
 type: post
 snippet: Example on how to send push notifications with Expo
 coverImage: '/add-notification-blog.png'
-date: '28.01.2020'
-topics: '#reactnative #react #node #javascript #expo'
+date: '28-01-2020'
+topics: 'reactnative react node javascript expo'
 ---
 
 ___
