--- a/src/content/blog/CDIS_A2.mdx
+++ b/src/content/blog/CDIS_A2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato & João Almeida
 file: /CDIS_A2.pdf
 snippet: Defense Strategy for a Representative Testbed
-date: '24.03.2020'
+date: '24-03-2020'
 ---
