--- a/src/content/blog/CDIS_CS3.mdx
+++ b/src/content/blog/CDIS_CS3.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /CDIS_CS3.pdf
 snippet: Mirai case study. The malicious botnet (of IoT devices) that was powerful enough to take down any website in the internet.
-date: '15.04.2020'
+date: '15-04-2020'
 ---
