--- a/src/content/blog/CRY_A2.mdx
+++ b/src/content/blog/CRY_A2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /CRY_A2.pdf
 snippet: Decentralizing PKIs with blockchain (Proof of concept).
-date: '15.10.2019'
+date: '15-10-2019'
 ---
