--- a/src/content/blog/CSAM_A2.mdx
+++ b/src/content/blog/CSAM_A2.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /CSAM_A2.pdf
 snippet: Pentesting a vulnerable linux machine and patching it
-date: '10.01.2020'
+date: '10-01-2020'
 ---
