--- a/src/content/blog/DDSS_CS1.mdx
+++ b/src/content/blog/DDSS_CS1.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /DDSS_CS1.pdf
 snippet: Case study about one of the most known ransomware attacks
-date: '30.08.2019'
+date: '30-08-2019'
 ---
