--- a/src/content/blog/HPSI_A1.mdx
+++ b/src/content/blog/HPSI_A1.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato
 file: /HPSI_A1.pdf
 snippet: Study about VMware ESXI networking subsystem and its traffic shaping capabilities
-date: '20.11.2019'
+date: '20-11-2019'
 ---
