--- a/src/content/blog/QCS_A1.mdx
+++ b/src/content/blog/QCS_A1.mdx
@@ -4,5 +4,5 @@ type: article
 author: José Donato & João Almeida
 file: /QCS_A1.pdf
 snippet: Concepts, terminology and software fault tolerance techniques
-date: '10.03.2020'
+date: '10-03-2020'
 ---
