--- a/src/content/blog/ITS_T1.mdx
+++ b/src/content/blog/ITS_T1.mdx
@@ -8,4 +8,4 @@ date: '23-05-2020'
 
 Phishing attacks are one of the most common type of cyber attacks. In this presentation (unfortunately only in portuguese) I explain what they are and show some cool demos.
 
-<VideoPlayer url="https://f003.backblazeb2.com/file/misc-01231/presentation_phishing_STI.mp4" />
+{/*<VideoPlayer url="https://f003.backblazeb2.com/file/misc-01231/presentation_phishing_STI.mp4" />*/}
